# bitcoin-zombies

./: .gitignore  README.md
arch-lessons/hello_world_program/: Cargo.toml
arch-lessons/hello_world_program/src/: lib.rs
arch-lessons/hello_world_program/tests/: integration_test.rs
arch-lessons/token_operations/: Cargo.toml  README.md
arch-lessons/token_operations/src/: lib.rs
arch-lessons/token_operations/tests/: integration_tests.rs
backend/: Cargo.toml  Dockerfile  arch_runner.rs  main.rs
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/components/: CodeEditor.tsx  ConsoleOutput.tsx  LessonSteps.tsx  ProtocolSelector.tsx  ProtocolTrackCard.tsx
frontend/pages/: index.tsx  lesson1.tsx
frontend/pages/tracks/: arch.tsx
frontend/pages/tracks/arch/: lesson1.tsx
frontend/styles/: globals.css
frontend/utils/: archLessonsData.ts  protocolManager.ts
tests/: runner.sh
