[package]
name = "token_operations"
edition = "2021"
version = "0.1.0"

[dependencies]
arch_sdk = "0.5.3"
arch_program = "0.5.3"
# Note: These would typically be actual crates, but for the lesson we'll simulate the functionality
# apl-token = { path = "../../token", features = ["no-entrypoint"] }
# apl-associated-token-account = { path = "../../associated-token-account", features = ["no-entrypoint"] }
bip322 = "0.0.9"
arch_test_sdk = "0.5.3"

bitcoincore-rpc = "0.19.0"
hex = "0.4.3"
borsh = { version = "1.4.0", features = ["derive"] }
bitcoin = { version = "0.32.3", features = ["serde", "rand"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3.3", features = ["env-filter", "ansi"] }
rand_core = "0.6.4"
serde_json = "1.0.128"
indicatif = "0.17.8"
termsize = "0.1.9"

[dev-dependencies]
serial_test = "3.1.1"

[lib]
path = "src/lib.rs"

[profile.dev]
debug-assertions = false 